syntax = "proto3";

package order;
option go_package = "order-service/proto;proto";

import "google/protobuf/empty.proto";

message OrderItem {
  string id = 1;
  string order_id = 2;
  string product_id = 3;
  int32 quantity = 4;
  double price = 5;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total = 4;
  string status = 5;
}

message CreateOrderRequest {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}

message ListOrdersRequest {
  string user_id = 1;
}

message OrderResponse {
  Order order = 1;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message Review {
  string id = 1;
  string product_id = 2;
  string user_id = 3;
  double rating = 4;
  string comment = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreateReviewRequest {
  Review review = 1;
}

message UpdateReviewRequest {
  Review review = 1;
}

message DeleteReviewRequest {
  string id = 1;
}

message ReviewResponse {
  Review review = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrderByID(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
  rpc ListUserOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc CreateReview(CreateReviewRequest) returns (ReviewResponse);
  rpc UpdateReview(UpdateReviewRequest) returns (ReviewResponse);
  rpc DeleteReview(DeleteReviewRequest) returns (google.protobuf.Empty);
}
